fix: layout shift related styles for quick links in footer

--- a/byteForge/src/styles/footer.scss
+++ b/byteForge/src/styles/footer.scss
@@ -116,6 +116,8 @@
                 ul {
                     display: flex;
 
+                    margin-left: -0.3rem;
+
                     width: 100%;
                     list-style: none;
 
